--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Mystagram Using Unsplash API",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "engines": {
     "node": "v12.18.0",
     "npm": "6.14.4"
   },
-  "author": "Saransuk Yimyong",
+  "author": "chuthamat chanuchit",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.4"
